<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PermissionFragment"
    android:padding="@dimen/screen_horizontal_padding">

    <ImageView
        android:id="@+id/yango_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/yango_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/permission_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/permission_text"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/location_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yango_logo"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.cardview.widget.CardView
        android:id="@+id/location_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/permission_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/next_btn"
        style="@style/GreyCardStyle"
        >


        <ImageView
            android:id="@+id/location_arrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/location_arrow_png"

            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/your_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/location_card"
        android:text="@string/your_location"
        app:layout_constraintTop_toTopOf="@id/location_card"
        app:layout_constraintBottom_toTopOf="@id/not_recognized_text"
        android:textSize="12sp"
        android:textColor="#999999"
        />
    <TextView
        android:id="@+id/not_recognized_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/location_card"
        android:text="@string/unrecognized"
        app:layout_constraintTop_toBottomOf="@id/your_location_text"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/location_card"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next_text"
        android:textAllCaps="false"
        style="@style/RedButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.97"
        android:layout_marginBottom="4dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>